# x3reader

./: BMFileParser.h  BMPath.xml  CMakeLists.txt  HModel.cpp  HModel.h  Timer.h  XCSP3Manager.cc  XCSP3PrintCallbacks.h  main.cpp
